--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "better-sqlite3": "^11.9.1"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
+    "@eslint/js": "^9.24.0",
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.30.1"
   },
   "scripts": {
     "build": "ray build -e dist",
